--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 		{% endfor %}
 		</ul>
 	</nav><!-- /.bottom-menu -->
-	<p class="copyright">&#169; 2010-{{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> by Miloš Anđelković.<br />
+	<p class="copyright">&#169; 2010-{{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> by <a href="{{ site.url }}/storm/">Miloš Anđelković</a>.<br />
 	Website powered by <a href="http://jekyllrb.com">Jekyll</a>. Theme based on <a href="http://mmistakes.github.io/skinny-bones-jekyll/">Skinny Bones</a>.<br />
 	Images of a "messy lab" by <a href="https://www.flickr.com/photos/34857812@N04/">PlaxcoLab</a>.</p>
 </footer>
