--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,7 @@
       <script src="{{ site.url }}/js/vendor/respond.min.js"></script>
     <![endif]-->
 
+	<link href="{{ site.url }}/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   </head>
 
   <body>
