--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
       <script src="{{ site.url }}/js/vendor/respond.min.js"></script>
     <![endif]-->
 
+	<link href="{{ site.url }}/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   </head>
 
   <body id="js-body">
