Trying to activate AdSense

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,6 +58,21 @@
         </div><!-- /.wrap -->
       </div><!-- /#main -->
 
+		<style>
+			.responsive-ads { width: 300px; height: 200px; }
+			@media(min-width: 520px) { .responsive-ads { width: 468px; height: 60px; } }
+			@media(min-width: 768px) { .responsive-ads { width: 160px; height: 600px; } }
+		</style> 
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- Messy Lab -->
+		<ins class="adsbygoogle"
+			style="display:block"
+			data-ad-client="ca-pub-4009796446816232"
+			data-ad-slot="7374285703"
+			data-ad-format="auto"></ins>
+		<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
       {% include footer.html %}
     </div>
 
